--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -8,3 +8,7 @@ add_to_cart_btn=Add to cart
 cancel_btn=Cancel
 sum=Amount
 delete=Delete
+login=Login
+password=Password
+signin=Sign in
+error_login=Error signing in
