--- a/src/main/resources/strings_fr.properties
+++ b/src/main/resources/strings_fr.properties
@@ -8,3 +8,7 @@ add_to_cart_btn=Ajouter au panier
 cancel_btn=Annuler
 sum=Quantit\u00E9
 delete=Effracer
+login=login
+password=passe
+signin=Se connecter
+error_login=Erreur lors de la signature
