--- a/src/main/resources/strings_fr.properties
+++ b/src/main/resources/strings_fr.properties
@@ -6,9 +6,10 @@ review_btn=Critiques
 all_genre=Tous les genres
 add_to_cart_btn=Ajouter au panier
 cancel_btn=Annuler
-sum=Quantit\u00E9
+sum=Quantit\u00E9: $
 delete=Effracer
 login=login
 password=passe
 signin=Se connecter
 error_login=Erreur lors de la signature
+buy=Acheter
