--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -6,9 +6,10 @@ review_btn=Reviews
 all_genre=All genres
 add_to_cart_btn=Add to cart
 cancel_btn=Cancel
-sum=Amount
+sum=Amount: $
 delete=Delete
 login=Login
 password=Password
 signin=Sign in
 error_login=Error signing in
+buy=Buy
