--- a/src/main/resources/strings_fr.properties
+++ b/src/main/resources/strings_fr.properties
@@ -13,3 +13,4 @@ password=passe
 signin=Se connecter
 error_login=Erreur lors de la signature
 buy=Acheter
+discount=Attention s'il vous plait! Tous les billets dans notre cin\u00E9ma co\u00FBtent 5 $.
