--- a/src/main/resources/strings_en.properties
+++ b/src/main/resources/strings_en.properties
@@ -14,3 +14,17 @@ signin=Sign in
 error_login=Error signing in
 buy=Buy
 discount=Attention! All tickets in our cinema cost $ 5.
+checkout=Checkout
+list_of_tickets=List of tickets
+film_name=Movie title
+tickets_quanity=Number of tickets
+pickup=Pickup
+delivery=Courier delivery
+choose_cinema=Choose cinema
+input_address=Enter the shipping address
+your_orders=Your orders
+your_comments=Your comments
+add_comment=Add a comment
+order_id=Order number
+order_structure=Order list
+order_date=Order date
