--- a/src/main/resources/strings_fr.properties
+++ b/src/main/resources/strings_fr.properties
@@ -14,3 +14,17 @@ signin=Se connecter
 error_login=Erreur lors de la signature
 buy=Acheter
 discount=Attention s'il vous plait! Tous les billets dans notre cin\u00E9ma co\u00FBtent 5 $.
+checkout=Passer une commande
+list_of_tickets=Liste des tickets
+film_name=Titre du film
+tickets_quanity=Nombre de billets
+pickup=Ramassage
+delivery=Livraison par courrier
+choose_cinema=Choisissez une salle de cin\u00E9ma
+input_address=Entrez l'adresse de livraison
+your_orders=Vos commandes
+your_comments=Vos commentaires
+add_comment=Ajouter un commentaire
+order_id=Num\u00E9ro de commande
+order_structure=Structure de la commande
+order_date=Date de la commande
